--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,8 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Maven Hello World</name>
+<properties>
+  <maven.compiler.source>8</maven.compiler.source>
+  <maven.compiler.target>8</maven.compiler.target>
+</properties>
 </project>
